--- a/trunk/efc/res/layout/shop_main.xml
+++ b/trunk/efc/res/layout/shop_main.xml
@@ -36,44 +36,62 @@
             android:background="@drawable/topbar_search_icon"
         />
     </LinearLayout>
-    <LinearLayout
-        android:orientation="horizontal"
+    <ScrollView
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:fillViewport="true"
     >
-        <TextView
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="商户全称:"
+        >
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="fill_parent"
+                android:layout_height="wrap_content"
+            >
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="商户全称:"
     />
-        <TextView
-            android:id="@+id/shopText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="商户说明:"
+                <TextView
+                    android:id="@+id/shopText"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="商户说明:"
     />
         
-    </LinearLayout>
+            </LinearLayout>
         
 <!--        android:layout_gravity="left"-->
-    <ImageView android:id="@+id/shopImage"
-               android:src="@drawable/loading_mini"
-               android:layout_width="fill_parent"
-               android:layout_height="200dp"
-               android:layout_gravity="center"
+            <ImageView android:id="@+id/shopImage"
+                   android:src="@drawable/loading_mini"
+                   android:layout_width="fill_parent"
+                   android:layout_height="200dp"
+                   android:layout_gravity="center"
     />
     
-    <Button 
-        android:background="@drawable/buttom_larg_button_icon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="申请会员卡"
-        android:layout_gravity="center"
-        android:padding="20dp"
-        android:textColor="#FFFFFF"
-        android:onClick="clickReq"
+            <Button 
+                android:background="@drawable/buttom_larg_button_icon"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="申请会员卡"
+                android:layout_gravity="center"
+                android:padding="20dp"
+                android:textColor="#FFFFFF"
+                android:onClick="clickReq"
         
     />
+    <!-- 门店列表 -->
+            <ListView android:id="@+id/shopPortList"
+                  android:layout_width="fill_parent"
+                  android:layout_height="wrap_content"
+    />
+            
+        </LinearLayout>
+    </ScrollView>
     
 </LinearLayout>
 
